--- a/Finanzen/Steuern/Steuerregisterabgleich/v2/config.cfg
+++ b/Finanzen/Steuern/Steuerregisterabgleich/v2/config.cfg
@@ -14,8 +14,8 @@ CUTOFF_DATE = 31.12.2022
 CUTOFF_DATE_FIELD = Zuzug_Datum
 
 # Spaltenformatierung der Relevanten Daten
-# Standart: ["NameEinwohner", "Rufname", "Geburtsdatum", "AdresszusatzStrasseHausStrassenzusatz", "PLZOrt", "AHV-VN"]
-DATA_CIT_FORMAT = ["NameEinwohner", "Rufname", "Geburtsdatum", "AdresszusatzStrasseHausStrassenzusatz", "PLZOrt", "AHV-VN"]
+# Standart: ["AHV-VN", "NameEinwohner", "Rufname", "Geburtsdatum", "AdresszusatzStrasseHausStrassenzusatz", "PLZOrt"]
+DATA_CIT_FORMAT = ["AHV_VN", "NameEinwohner", "Rufname", "Geburtsdatum", "AdresszusatzStrasseHausStrassenzusatz", "PLZOrt"]
 
 # --------------------- Steuerregister ---------------------
 
