--- a/Finanzen/Steuern/Steuerregisterabgleich/v2/config.cfg
+++ b/Finanzen/Steuern/Steuerregisterabgleich/v2/config.cfg
@@ -9,13 +9,17 @@
 # Standart: 31.12.2022
 CUTOFF_DATE = 31.12.2022
 
+# Ob das Programm nach dem Zuzugsdatum filtern soll
+# Standart: True
+CUTOFF_DATE_FILTER = True
+
 # Name der Spalte mit dem Zuzugsdatum
 # Standart: Zuzug_Datum
 CUTOFF_DATE_FIELD = Zuzug_Datum
 
 # Spaltenformatierung der Relevanten Daten
-# Standart: ["AHV-VN", "NameEinwohner", "Rufname", "Geburtsdatum", "AdresszusatzStrasseHausStrassenzusatz", "PLZOrt"]
-DATA_CIT_FORMAT = ["AHV_VN", "NameEinwohner", "Rufname", "Geburtsdatum", "AdresszusatzStrasseHausStrassenzusatz", "PLZOrt"]
+# Standart: ["NameEinwohner", "Rufname", "StrasseHaus", "PLZOrt", "Verischertennummer"]
+DATA_CIT_FORMAT = ["NameEinwohner", "Rufname", "StrasseHaus", "PLZOrt", "Verischertennummer"]
 
 # --------------------- Steuerregister ---------------------
 
