--- a/Finanzen/Steuern/Steuerregisterabgleich/v2/config.cfg
+++ b/Finanzen/Steuern/Steuerregisterabgleich/v2/config.cfg
@@ -11,7 +11,7 @@ CUTOFF_DATE = 31.12.2022
 
 # Ob das Programm nach dem Zuzugsdatum filtern soll
 # Standart: True
-CUTOFF_DATE_FILTER = True
+CUTOFF_DATE_FILTER = False
 
 # Name der Spalte mit dem Zuzugsdatum
 # Standart: Zuzug_Datum
@@ -19,10 +19,14 @@ CUTOFF_DATE_FIELD = Zuzug_Datum
 
 # Spaltenformatierung der Relevanten Daten
 # Standart: ["NameEinwohner", "Rufname", "StrasseHaus", "PLZOrt", "Verischertennummer"]
-DATA_CIT_FORMAT = ["NameEinwohner", "Rufname", "StrasseHaus", "PLZOrt", "Verischertennummer"]
+DATA_CIT_FORMAT = ["NameEinwohner", "Rufname", "StrasseHaus", "PLZOrt", "Versichertennummer"]
+
+# Name des Feldes mit der AHV-Nummer
+# Standart: Versichertennummer
+CIT_AHV_FIELD = Versichertennummer
 
 # --------------------- Steuerregister ---------------------
 
 # Name der Spalte mit der AHV-Nummer
 # Standart: AHV-VN
-AHV_FIELD = AHV-VN
+TAX_AHV_FIELD = AHV-VN
