--- a/Finanzen/Steuern/Steuerregisterabgleich/v2/config.cfg
+++ b/Finanzen/Steuern/Steuerregisterabgleich/v2/config.cfg
@@ -9,7 +9,7 @@
 # Standart: 31.12.2022
 CUTOFF_DATE = 31.12.2022
 
-# Ob das Programm nach dem Zuzugsdatum filtern soll
+# Ob das Programm nach dem Zuzugsdatum filtern soll (NUR WENN DAS EINWOHNERREGISTER DIE SPALTE MIT DEM ZUZUGSDATUM ENTHÄLT!)
 # Standart: True
 CUTOFF_DATE_FILTER = False
 
@@ -17,7 +17,7 @@ CUTOFF_DATE_FILTER = False
 # Standart: Zuzug_Datum
 CUTOFF_DATE_FIELD = Zuzug_Datum
 
-# Spaltenformatierung der Relevanten Daten
+# Spaltenformatierung der Relevanten Daten (Spaltennamen)
 # Standart: ["NameEinwohner", "Rufname", "StrasseHaus", "PLZOrt", "Verischertennummer"]
 DATA_CIT_FORMAT = ["NameEinwohner", "Rufname", "StrasseHaus", "PLZOrt", "Versichertennummer"]
 
@@ -27,6 +27,6 @@ CIT_AHV_FIELD = Versichertennummer
 
 # --------------------- Steuerregister ---------------------
 
-# Name der Spalte mit der AHV-Nummer
+# Name der Spalte mit der AHV-Nummer (In den Steuerregistern)
 # Standart: AHV-VN
 TAX_AHV_FIELD = AHV-VN
