--- a/Finanzen/Steuern/Steuerregisterabgleich/v2/config.cfg
+++ b/Finanzen/Steuern/Steuerregisterabgleich/v2/config.cfg
@@ -11,15 +11,15 @@ CUTOFF_DATE = 31.12.2022
 
 # Ob das Programm nach dem Zuzugsdatum filtern soll (NUR WENN DAS EINWOHNERREGISTER DIE SPALTE MIT DEM ZUZUGSDATUM ENTHÄLT!)
 # Standart: True
-CUTOFF_DATE_FILTER = False
+CUTOFF_DATE_FILTER = True
 
 # Name der Spalte mit dem Zuzugsdatum
 # Standart: Zuzug_Datum
 CUTOFF_DATE_FIELD = Zuzug_Datum
 
 # Spaltenformatierung der Relevanten Daten (Spaltennamen)
-# Standart: ["NameEinwohner", "Rufname", "StrasseHaus", "PLZOrt", "Verischertennummer"]
-DATA_CIT_FORMAT = ["NameEinwohner", "Rufname", "StrasseHaus", "PLZOrt", "Versichertennummer"]
+# Standart: ["NameEinwohner", "Rufname", "Geburtsdatum", "StrasseHaus", "PLZOrt", "Verischertennummer"]
+DATA_CIT_FORMAT = ["NameEinwohner", "Rufname", "Geburtsdatum", "StrasseHaus", "PLZOrt", "Versichertennummer"]
 
 # Name des Feldes mit der AHV-Nummer
 # Standart: Versichertennummer
