--- a/Finanzen/Steuern/Steuerregisterabgleich/v2/config.cfg
+++ b/Finanzen/Steuern/Steuerregisterabgleich/v2/config.cfg
@@ -18,8 +18,8 @@ CUTOFF_DATE_FILTER = True
 CUTOFF_DATE_FIELD = Zuzug_Datum
 
 # Spaltenformatierung der Relevanten Daten (Spaltennamen)
-# Standart: ["NameEinwohner", "AlleVornamen", "Geburtsdatum", "StrasseHaus", "PLZOrt", "Verischertennummer"]
-DATA_CIT_FORMAT = ["NameEinwohner", "AlleVornamen", "Geburtsdatum", "StrasseHaus", "PLZOrt", "Versichertennummer"]
+# Standart: ["NameEinwohner", "AlleVornamen", "Geburtsdatum", "StrasseHaus", "PLZOrt", "Verischertennummer", "Zuzug_Datum"]
+DATA_CIT_FORMAT = ["NameEinwohner", "AlleVornamen", "Geburtsdatum", "StrasseHaus", "PLZOrt", "Versichertennummer", "Zuzug_Datum"]
 
 # Name des Feldes mit der AHV-Nummer
 # Standart: Versichertennummer
