--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,6 @@ cython_debug/
 # Finanzen
 Finanzen/Steuern/Steuerregisterabgleich/v2/data
 Finanzen/Steuern/Steuerregisterabgleich/v1/register
+
+# Daten
+*.xlsx
